--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "native-ext-loader": "^2.3.0",
     "neon-cli": "^0.6.0",
+    "node-loader": "^1.0.2",
     "prettier": "^1.19.1",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-template-compiler": "^2.6.11"
